--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,21 +192,20 @@ div.textBox {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #9fbfe0;
-  box-shadow: rgba(64, 241, 112, 0.962) 0 3px 12px;
-  margin: 1.5rem;
+  background-color: #050f19;
+  box-shadow: rgba(255, 255, 255, 0.962) 0 3px 12px;
+  margin: 1rem;
   transition: all 0.5s;
-  border-radius: 2px;
-  border-radius: 100%;
+  border-radius: 25%;
   position: relative;
 }
 .team__card-img {
   margin: 1rem;
 }
 .team__card-img img {
-  border-radius: 50%;
-  height: 8rem;
-  width: 8rem;
+  border-radius: 25%;
+  height: 10rem;
+  width: 10rem;
   object-fit: cover;
 }
 .team__card-img img:hover {
